@@ -1,5 +1,5 @@
 // Copyright 2002-2012, University of Colorado
-package edu.colorado.phet.beerslawlab.beerslaw.view;
+package edu.colorado.phet.common.piccolophet.nodes;
 
 import java.awt.Cursor;
 import java.awt.Image;
@@ -7,11 +7,9 @@ import java.awt.Image;
 import edu.colorado.phet.common.phetcommon.model.property.Property;
 import edu.colorado.phet.common.phetcommon.simsharing.SimSharingManager;
 import edu.colorado.phet.common.phetcommon.simsharing.messages.IUserComponent;
-import edu.colorado.phet.common.phetcommon.simsharing.messages.IUserComponentType;
 import edu.colorado.phet.common.phetcommon.simsharing.messages.UserActions;
 import edu.colorado.phet.common.phetcommon.simsharing.messages.UserComponentTypes;
 import edu.colorado.phet.common.phetcommon.util.SimpleObserver;
-import edu.colorado.phet.common.piccolophet.PiccoloPhetResources;
 import edu.colorado.phet.common.piccolophet.event.DynamicCursorHandler;
 import edu.umd.cs.piccolo.PNode;
 import edu.umd.cs.piccolo.event.PBasicInputEventHandler;
@@ -20,32 +18,23 @@ import edu.umd.cs.piccolo.nodes.PImage;
 
 /**
  * A toggle button.
- * Origin is at the center of the button.
+ * Origin is at the upper-left of the bounding rectangle.
  *
  * @author Chris Malley (cmalley@pixelzoom.com)
  */
-class ToggleButtonNode extends PNode {
-
-    private final IUserComponentType USER_COMPONENT_TYPE = UserComponentTypes.button;
+public class ToggleButtonNode extends PNode {
 
     private final PImage imageNode;
     private final DynamicCursorHandler cursorHandler;
 
     // Button that will always be enabled.
-    public ToggleButtonNode( IUserComponent userComponent, Property<Boolean> onProperty ) {
-        this( userComponent, onProperty, new Property<Boolean>( true ) );
+    public ToggleButtonNode( IUserComponent userComponent, Property<Boolean> onProperty, final Image onImage, final Image offImage ) {
+        this( userComponent, onProperty, onImage, offImage, new Property<Boolean>( true ), onImage, offImage );
     }
 
-    // Constructor that uses default images (round red buttons with 3D look)
-    public ToggleButtonNode( IUserComponent userComponent, Property<Boolean> onProperty, Property<Boolean> enabledProperty ) {
-        this( userComponent, onProperty, enabledProperty,
-              PiccoloPhetResources.getImage( "button_pressed.png" ),
-              PiccoloPhetResources.getImage( "button_unpressed.png" ),
-              PiccoloPhetResources.getImage( "button_disabled.png" ) );
-    }
-
-    public ToggleButtonNode( final IUserComponent userComponent, final Property<Boolean> onProperty, final Property<Boolean> enabledProperty, final Image onImage, final Image offImage, final Image disabledImage ) {
-        assert ( onImage != offImage ); // different images are required
+    public ToggleButtonNode( final IUserComponent userComponent,
+                             final Property<Boolean> onProperty, final Image onImage, final Image offImage,
+                             final Property<Boolean> enabledProperty, final Image onDisabledImage, final Image offDisabledImage ) {
 
         cursorHandler = new DynamicCursorHandler();
 
@@ -55,7 +44,7 @@ class ToggleButtonNode extends PNode {
         addInputEventListener( new PBasicInputEventHandler() {
             @Override public void mousePressed( PInputEvent event ) {
                 if ( enabledProperty.get() ) {
-                    SimSharingManager.sendUserMessage( userComponent, USER_COMPONENT_TYPE, UserActions.pressed );
+                    SimSharingManager.sendUserMessage( userComponent, UserComponentTypes.button, UserActions.pressed );
                     onProperty.set( !onProperty.get() );
                 }
             }
@@ -64,10 +53,10 @@ class ToggleButtonNode extends PNode {
         onProperty.addObserver( new SimpleObserver() {
             public void update() {
                 if ( enabledProperty.get() ) {
-                    setImage( onProperty.get() ? onImage : offImage );
+                    imageNode.setImage( onProperty.get() ? onImage : offImage );
                 }
                 else {
-                    setImage( disabledImage );
+                    imageNode.setImage( onProperty.get() ? onDisabledImage : offDisabledImage );
                 }
             }
         } );
@@ -75,22 +64,16 @@ class ToggleButtonNode extends PNode {
         enabledProperty.addObserver( new SimpleObserver() {
             public void update() {
                 if ( enabledProperty.get() ) {
-                    setImage( offImage );
+                    imageNode.setImage( onProperty.get() ? onImage : offImage );
                     cursorHandler.setCursor( Cursor.HAND_CURSOR );
                 }
                 else {
-                    onProperty.set( false );
-                    setImage( disabledImage );
+                    imageNode.setImage( onProperty.get() ? onDisabledImage : offDisabledImage );
                     cursorHandler.setCursor( Cursor.DEFAULT_CURSOR );
                 }
             }
         } );
 
         addInputEventListener( cursorHandler );
-    }
-
-    private void setImage( Image image ) {
-        imageNode.setImage( image );
-        imageNode.setOffset( -imageNode.getFullBoundsReference().getWidth() / 2, -imageNode.getFullBoundsReference().getHeight() / 2 );
     }
 }
