@@ -24,7 +24,5 @@ LOW
 SIM-SHARING
 
 MIGRATE TO COMMON
-- MomentaryButtonNode to piccolo-phet
-- ToggleButtonNode to piccolo-phet
 - TiledBackgroundNode to piccolo-phet
 - BLLWavelengthControl (adapter for using WavelengthControl with Property<Double>)
